# wildfires-2025

./: .gitignore  Dockerfile  Makefile  index.html  main.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
public/: fires.fgb  fires.geojson
queries/fires/: by_state.sql
