[project]
name = "wildfires-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasette-geojson-map>=0.5.0",
    "datasette>=0.65.1",
    "geojson-to-sqlite>=1.1.1",
    "sqlite-utils>=3.38",
    "sqlite-colorbrewer>=0.2",
    "httpx>=0.28.1",
]
